{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 32,
  "lineage": "abec752d-c280-03e7-21c3-faa569915676",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315655993037:internet-gateway/igw-05f06c76a9f1b106d",
            "id": "igw-05f06c76a9f1b106d",
            "owner_id": "315655993037",
            "tags": {
              "Name": "plataforma-ead-igw"
            },
            "tags_all": {
              "Name": "plataforma-ead-igw"
            },
            "vpc_id": "vpc-05049c29e8bffd0fe"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315655993037:route-table/rtb-01cfd3ec321affc7f",
            "id": "rtb-01cfd3ec321affc7f",
            "owner_id": "315655993037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f06c76a9f1b106d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "plataforma-ead-rtb"
            },
            "tags_all": {
              "Name": "plataforma-ead-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05049c29e8bffd0fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e90b4f17eeef1360",
            "route_table_id": "rtb-01cfd3ec321affc7f",
            "subnet_id": "subnet-089b28695a78dd600"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.public-subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebba9155d71a5c89",
            "route_table_id": "rtb-01cfd3ec321affc7f",
            "subnet_id": "subnet-0990e85bce4194c66"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.public-subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315655993037:security-group/sg-01869c227c642917b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01869c227c642917b",
            "ingress": [],
            "name": "terraform-20231111132218911300000001",
            "name_prefix": "terraform-",
            "owner_id": "315655993037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "plataforma-ead-sg"
            },
            "tags_all": {
              "Name": "plataforma-ead-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05049c29e8bffd0fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315655993037:subnet/subnet-089b28695a78dd600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089b28695a78dd600",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "315655993037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "plataforma-ead-public-subnet-0"
            },
            "tags_all": {
              "Name": "plataforma-ead-public-subnet-0"
            },
            "vpc_id": "vpc-05049c29e8bffd0fe"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315655993037:subnet/subnet-0990e85bce4194c66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0990e85bce4194c66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "315655993037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "plataforma-ead-public-subnet-1"
            },
            "tags_all": {
              "Name": "plataforma-ead-public-subnet-1"
            },
            "vpc_id": "vpc-05049c29e8bffd0fe"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:315655993037:vpc/vpc-05049c29e8bffd0fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0733d8ba0d10c0b5a",
            "default_route_table_id": "rtb-0dc4ebdfe67a19200",
            "default_security_group_id": "sg-01c9c019512170567",
            "dhcp_options_id": "dopt-029e9f1bfd1b3dcb6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05049c29e8bffd0fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc4ebdfe67a19200",
            "owner_id": "315655993037",
            "tags": {
              "Name": "plataforma-ead-vpc"
            },
            "tags_all": {
              "Name": "plataforma-ead-vpc"
            }
          }
        }
      ]
    }
  ]
}